# LogosAI

./: .dockerignore  .env.copy  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  frontend_optimization_guide.md  main.py  pyproject.toml  refactor.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  app.py  cli.py  database.py  main.py  pyproject.toml  service.py  tools.py  use_cases.py
backend/app/: main.py
backend/db/: models.py  session.py
backend/llm/: agent.py  prompts.py  state.py  vocabulary.py
backend/process/: agent.py  interpretation.py  ocr.py  translation.py
backend/routers/: routes.py  sse.py
backend/schema/: analyze_schema.py
backend/schemas/: analyze.py  vocabulary.py
backend/services/: analysis_service.py
backend/tests/: conftest.py  helpers.py  test_analyze_stream.py  test_vocabulary.py
backend/workflow/: agent.py  interpretation.py  prompt.py
cli/: package-lock.json  package.json
cli/mock/: server.ts
cli/src/: index.ts
cli/src/api/: client.ts
cli/src/types/: api.ts
doc/: ch.md
frontend/: Dockerfile  components.json  eslint.config.js  index.css  index.html  main.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: App.tsx  AppLayout.tsx
frontend/client-api/: analysisApi.ts
frontend/components/: AnalysisPanel.tsx  DeleteConfirmDialog.tsx  Header.tsx  HistoryListItem.tsx  HistoryPanel.tsx  ResultCard.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  textarea.tsx  (+1 more)
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/types/: index.ts
frontend/utils/: historyStorage.ts  parseSse.ts  settingsStorage.ts
old/: app.py
old/app/: db_models.py
old/process/: interpretation.py  translation.py
src/: app.py
src/process/: gradio_css.py  interface.py  interpretation.py  ocr.py  pdf_ocr.py  sys_prompt.py  translation.py  wiktionary.py
(+55 files in other folders)
