[project]
name = "LogosAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.19.0",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langsmith>=0.4.38",
    "openai>=1.109.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.34.3",
]
